# journal

./: .gitignore  .gitmodules  .jekyll-metadata  2015-08-19-o-estranho-caso-do-pdb-mal-formado.md  404.html  CNAME  Listas.xlsx  README.md  _config-local.yml  _config-only-drafts.yml  _config.yml  all.md  atom.xml  author.md  b.bat  blog.caloni.com.br.tdl  body.txt  bootstrap.bat  bootstrap.cmd  build.cmd  cinemaqui  cinemaqui.cmd  clippings.txt  config.toml  desktop.ini  draft.txt  draft2.txt  export-to-jekyll.py  index.html  index.md  index.php  journal.txt  journal_config.txt  list.csv  movie.py  movies.py  new-movie.cmd  new-movie.md  new-review.html  new.cmd  (+11 more)
2048/: leiame.md
AlienNumber/: AlienNumber.cpp  AlienNumber.sln  AlienNumber.vcproj
Assembly++/: Algorithm.cpp  Algorithm.h  Recursion.cpp  Recursion.h
AssignmentOperator/: AssignmentOperator.sln
BasicString/: BasicString.vcxproj  BasicString.vcxproj.filters  readme.md
BiMap/: BiMap.vcxproj.filters
BovespaBacktesting/: bovespa-backtesting.md  calc.py  import-quote.py  indicators.py
BovespaReader/: .bovespa.py.swp  bovespa.py
Bus/: Bus.cpp  Bus.sln  BusLines.txt
C++11/: C++11.vcxproj  C++11.vcxproj.filters
CDMgr/: cdmgr.sln  main.cs
CodeProject/: codeproject_template.html
ConfigUpd/: ConfigUpd.cpp  ConfigUpd.def  ConfigUpd.h  ConfigUpd.vcproj
ContadorAlienigena/: ContadorAlienigena.cpp  ContadorAlienigena.sln  ContadorAlienigena.vcxproj  ContadorAlienigena.vcxproj.filters
CrashOnServer/: CrashOnServer.cpp
Curtas/: ab-ovo.md  baoba.md  day-of-the-fight.md  deus-esta-brincando.md  flying-padre-an-rko-pathe-screenliner.md  free-wheel.md  na-hora-do-poente.md  o-100-o-trabalho.md  o-cangaceiro.md  o-inverno-chegou.md  o-vendedor-de-fumaca.md  origami.md  primeiro-turno.md  the-seafarers.md
DiamantesSaoEtereos/: DiamantesSaoEtereos.sln  Teste1.cpp
DiskDump/: diskdump.cpp
ExceptionSStream/: Cuidado com variáveis temporárias.txt  (+1 more)
H2HC/: H2HC.cpp  (+4 more)
src/: BlogWriter.awk  BookWriter.awk  CMakeLists.txt  MarkdownParser.awk  MetadataParser.awk  MetadataWriter.awk  PublishBlog.py  Util.awk  _clippings2draft.py  _journal2blog.py  awkblog.def  body2graph.py  build.py  constants.h  gawkapi.h  journal2blog.py  journal2book.py  merge.cpp  movie_info.py  publish.cpp  publish_blog.py  publish_book.py  run_tests.py  tests.awk
src/journal/: CMakeLists.txt  README.md  application.cpp  application.h  blog.cpp  blog.h  blog_generator.cpp  book.cpp  book.h  book_generator.cpp  composite_generator.cpp  config.cpp  config.h  converters.cpp  converters.h  entities.cpp  entities.h  iblog.h  ibook.h  iconfig.h  ijournal.h  intercepting_parser.cpp  intercepting_parser.h  ioutput.h  iparser.h  iparser_interceptor.h  ishell.h  journal.c  journal.cpp  journal.h  journal.sln  journal.vcxproj  journal.vcxproj.filters  main.c  main.cpp  markdown_parser.cpp  metadata_interceptor.cpp  metadata_interceptor.h  output_factory.cpp  parser.cpp  (+8 more)
src/journal/dotnet/: Journal.sln
src/journal/dotnet/Journal/: Blog.cs  Book.cs  Config.cs  Journal.cs  Program.cs  README.md  Shell.cs  journal_config.txt
src/journal/dotnet/Journal.Test/: Journal.Test.csproj  TestConfig.cs  TestJournal.cs  TestMain.cs
src/journal/dotnet/Journal/Interfaces/: IBlog.cs  IBook.cs  IConfig.cs  IJournal.cs  IShell.cs
src/journal/dotnet/Journal/Properties/: launchSettings.json
src/journal/dotnet/Journal2/: Journal.sln  Program.cs
src/journal/dotnet/Journal2/Properties/: launchSettings.json
src/journal/test/: CMakeLists.txt  main.c
src/journal/tests/: CMakeLists.txt  test_application.cpp  test_config.cpp  test_journal.cpp  testconfig.cpp  testjournal.cpp
src/tests/: test_full_journal.py  test_journal2blog.py  test_journal2book.py  test_markdown_parser.py
(+28088 files in other folders)
